<resources>
    <string name="app_name">QRA</string>
    <string name="main_icon">Main icon</string>
    <string name="login_title">تسجيل الدخول</string>
    <string name="set_id">أدخل الرقم الجامعي</string>
    <string name="idHint">120220000</string>
    <string name="login_button">login button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="course_name">إسم المساق</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="language">اللغة العربية</string>
    <string name="languageMain">اللغة</string>
    <string name="Dark_mode">الوضع مظلم</string>
    <string name="personal_info">البيانات الشخصية</string>
    <string name="name">مهدي ديب عمر طه</string>
    <string name="id">120190000</string>
    <string name="address">غزة-فلسطين</string>
    <string name="email">example@example.com</string>
    <string name="phone">+970590000000</string>
    <string name="saturday">السبت</string>
    <string name="demo_time">10:00-11:00</string>
    <string name="demo_division">I117</string>
    <string name="statistics">إحصائيات المساق</string>
    <string name="total_lectures">العدد الإجمالي للمحاضرات</string>
    <string name="attended_lectures">عدد المحاضرات التي تم حضورها</string>
    <string name="lost_lectures">عدد المحاضرات المتغيب عنها</string>
    <string name="warn">تذكير..!</string>
    <string name="course_off">نسبة حضور الطالب الكلي من مئة هو:</string>
</resources>